# rip

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
