[package]
name = "rip-cli"
version = "0.5.0"
edition = "2021"
description = "Fuzzy find and kill processes from your terminal"
license = "MIT"
repository = "https://github.com/cesarferreira/rip"
keywords = ["cli", "process", "kill", "fuzzy", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "rip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
nix = { version = "0.29", features = ["signal"] }
colored = "2"
inquire = "0.7"
terminal_size = "0.4"
ratatui = "0.29"
crossterm = "0.28"
listeners = "0.3"
